--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#" onclick="showPage('about')">About</a></li>
                 <li><a href="#" onclick="showPage('education')">Education</a></li>
                 <li><a href="#" onclick="showPage('internships')">Internships</a></li>
+                <li><a href="#" onclick="showPage('Contact')">Contact</a></li>
             </ul>
         </div>
     </nav>
