--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 
                 <div class="welcome-message">
                     <h3>🚀 Greetings, Fellow Space Travelers!</h3>
-                    <p>Welcome to my cosmic corner of the internet! I'm Bibek, a passionate computer science student from Nepal, currently orbiting through the vast universe of technology. Like a curious astronaut exploring distant galaxies, I navigate through the realms of full-stack development, artificial intelligence, and cloud computing.</p>
+                    <p>Welcome to my cosmic corner of the internet! I'm Bibek, a passionate computer science student, currently orbiting through the vast universe of technology. Like a curious astronaut exploring distant galaxies, I navigate through the realms of full-stack development, artificial intelligence, and cloud computing.</p>
                     <p>Join me on this stellar journey as we explore the infinite possibilities of code, innovation, and digital transformation. Together, we'll reach for the stars and create solutions that are truly out of this world! 🌟</p>
                 </div>
 
@@ -191,7 +191,6 @@
             <div class="timeline-item">
                 <div class="timeline-date">Completed: February 24, 2021</div>
                 <h3 class="timeline-title">Higher Secondary Education (Class XII)</h3>
-                <p class="timeline-subtitle">Manimukunda College, NEB, Butwal, Rupandehi, Nepal</p>
                 <p class="timeline-description">
                     Achieved a commendable CGPA of 3.24/4 in my higher secondary education with a focus on Science stream. This foundation provided me with strong analytical thinking skills and prepared me for the rigorous demands of engineering studies. The curriculum included advanced mathematics, physics, chemistry, and computer science fundamentals.
                 </p>
@@ -200,7 +199,6 @@
             <div class="timeline-item">
                 <div class="timeline-date">Completed: July 4, 2018</div>
                 <h3 class="timeline-title">Secondary Education (Class X)</h3>
-                <p class="timeline-subtitle">Hillbert School, NEB, Banganga, Kapilvastu, Nepal</p>
                 <p class="timeline-description">
                     Completed my secondary education with an excellent CGPA of 3.60/4, demonstrating consistent academic excellence from an early age. This educational milestone laid the groundwork for my scientific temperament and problem-solving abilities that would later prove invaluable in my technology career.
                 </p>
